--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <span class="wireless"></span>
         <span class="battery"></span>
         <div class="screen">
-            <span>0634220002</span>
+            <span></span>
         </div>
 
         <div class="keyboard">
+            <div class="numbers">
             <section>
                 <button>1</button>
                 <button>2
@@ -52,6 +53,7 @@
                 <button>0<span>&nbsp;&nbsp;&nbsp;&plus;</span></button>
                 <button>#</button>
             </section>
+            </div>
             <button class="call">
                 <img src="icons/call.svg" alt="">
             </button>
@@ -69,9 +71,9 @@
                     <img src="icons/contacts.svg" alt="">
                     <span>Contacts</span>
                 </button>
-                <button class="keypad">
+                <button class="keypad" id="keypad">
                     <img src="icons/keypad.svg" alt="">
-                    <span>Keypad</span>
+                    <span >Keypad</span>
                 </button>
                 <button class="voicemail">
                     <img src="icons/voicemail.svg" alt="">
@@ -81,6 +83,8 @@
         </div>
 
     </div>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
